--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npm run test:lint && npm run test:unit",
     "test:unit": "jest",
-    "test:lint": "lint",
+    "test:lint": "lint -t typescript './lib/**/*.ts'",
     "semantic-release": "semantic-release",
     "clean": "rm -fR dist/",
     "rebuild": "npm run clean && npm run build",
@@ -32,15 +32,22 @@
     "utility"
   ],
   "config": {
+    "tslint": {
+      "rules": {
+        "no-unsafe-any": false
+      }
+    },
     "exportAliases": {
       "extend": "./dist/extend"
     }
+  },
+  "dependencies": {
+    "dom-testing-library": "^2.6.1"
   },
   "devDependencies": {
     "@patrickhulce/lint": "^2.1.3",
     "@types/jest": "^23.1.1",
     "@types/puppeteer": "^1.3.4",
-    "dom-testing-library": "2.6.1",
     "generate-export-aliases": "^1.1.0",
     "jest": "^23.1.0",
     "puppeteer": "^1.5.0",
