--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     }
   },
   "dependencies": {
-    "dom-testing-library": "^2.6.1"
+    "dom-testing-library": "^2.6.1",
+    "wait-for-expect": "^0.4.0"
   },
   "devDependencies": {
     "@patrickhulce/lint": "^2.1.3",
