chore(travis): enable automated publishing

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ node_js:
   - v10
   - v8
 before_install:
-  - npm install -g yarn coveralls nyc
+  - npm install -g yarn coveralls nyc @patrickhulce/scripts
 script:
   - yarn rebuild
   - yarn test:lint
   - yarn test:unit --coverage --runInBand --verbose
 after_success:
   - cat coverage/lcov.info | coveralls || echo 'Failed to upload to coveralls...'
-  # - yarn semantic-release
+  - hulk npm-publish --yes
