--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "npm run test:lint && npm run test:unit",
     "test:unit": "jest",
     "test:lint": "lint -t typescript './lib/**/*.ts'",
+    "pretest": "npm run rebuild",
     "semantic-release": "semantic-release",
     "clean": "rm -fR dist/",
     "rebuild": "npm run clean && npm run build",
