--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,15 @@ notifications:
 node_js:
   - v10
   - v8
+env:
+  - PPTR_OVERRIDE_VERSION=1.5.x
+  - PPTR_OVERRIDE_VERSION=1.7.x
+  - PPTR_OVERRIDE_VERSION=1.12.x
+  - PPTR_OVERRIDE_VERSION=latest
 before_install:
   - npm install -g yarn coveralls nyc @patrickhulce/scripts
+before_script:
+  - npm install --no-save "puppeteer@${PPTR_OVERRIDE_VERSION}"
 script:
   - yarn rebuild
   - yarn test:lint
