feat: upgrade to dom-testing-library 4.x.x
BREAKING CHANGE:

-  getBy and findBy throw on multiple matches
-  *ByValue functions removed
-  *BySelectText functions removed

See https://github.com/testing-library/dom-testing-library/releases/tag/v4.0.0

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,13 @@
     "sourceMap": true,
     "declaration": true,
 
+    "skipLibCheck": true,
+
     "strict": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
     "strictNullChecks": true,
-    "preserveWatchOutput": true,
+    "preserveWatchOutput": true
   },
-  "include": [
-    "lib/**/*"
-  ]
+  "include": ["lib/**/*"]
 }
