--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     }
   },
   "dependencies": {
-    "dom-testing-library": "^3.11.0",
+    "dom-testing-library": "^4.1.1",
     "wait-for-expect": "^0.4.0"
   },
   "devDependencies": {
@@ -55,6 +55,7 @@
     "rollup": "^0.61.1",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-replace": "^2.2.0",
     "ts-jest": "^22.4.6",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2"
