--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
   "devDependencies": {
     "@patrickhulce/lint": "^2.1.3",
     "@types/jest": "^23.1.1",
-    "@types/puppeteer": "^1.10.0",
+    "@types/puppeteer": "^2.0.0",
     "generate-export-aliases": "^1.1.0",
     "jest": "^23.1.0",
-    "puppeteer": "^1.16.0",
+    "puppeteer": "^2.0.0",
     "rollup": "^0.61.1",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
@@ -61,6 +61,6 @@
     "typescript": "^2.9.2"
   },
   "peerDependencies": {
-    "puppeteer": "^1.5.0"
+    "puppeteer": "^1.5.0 || ^2.0.0"
   }
 }
