--- a/package.json
+++ b/package.json
@@ -60,15 +60,15 @@
   },
   "devDependencies": {
     "@patrickhulce/lint": "^2.1.3",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@rollup/plugin-replace": "^2.3.1",
     "@types/jest": "^25.1.4",
     "@types/puppeteer": "^2.0.0",
     "generate-export-aliases": "^1.1.0",
     "jest": "^25.1.0",
     "puppeteer": "^2.0.0",
     "rollup": "^2.0.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.2.0",
     "ts-jest": "^25.2.1",
     "tslint": "^6.0.0",
     "typescript": "^3.8.3"
