--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "wait-for-expect": "^3.0.2"
   },
   "devDependencies": {
+    "@hover/javascript": "^4.0.2",
     "@patrickhulce/lint": "^2.1.3",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
