--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "playwright-testing-library",
-  "version": "0.0.0-development",
+  "version": "0.0.0-semantically-released",
   "description": "playwright + dom-testing-library",
   "main": "./dist/index.js",
   "scripts": {
     "test": "yarn test:lint && yarn test:unit",
     "test:unit": "jest",
     "test:lint": "lint -t typescript './lib/**/*.ts'",
-    "semantic-release": "semantic-release",
     "clean": "rm -fR dist/",
     "rebuild": "yarn clean && yarn build",
     "prepublishOnly": "yarn rebuild && generate-export-aliases",
     "build": "yarn build:ts && yarn build:rollup",
     "build:ts": "tsc",
-    "build:rollup": "rollup -c rollup.config.js"
+    "build:rollup": "rollup -c rollup.config.js",
+    "ci-after-success": "hover-scripts ci-after-success"
   },
   "repository": {
     "type": "git",
