--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "description": "playwright + dom-testing-library",
   "main": "./dist/index.js",
   "scripts": {
-    "test": "yarn test:lint && yarn test:unit",
-    "test:unit": "jest",
-    "test:lint": "lint -t typescript './lib/**/*.ts'",
-    "clean": "rm -fR dist/",
-    "rebuild": "yarn clean && yarn build",
-    "prepublishOnly": "yarn rebuild && generate-export-aliases",
     "build": "yarn build:ts && yarn build:rollup",
-    "build:ts": "tsc",
     "build:rollup": "rollup -c rollup.config.js",
-    "ci-after-success": "hover-scripts ci-after-success"
+    "build:ts": "tsc",
+    "ci-after-success": "hover-scripts ci-after-success",
+    "clean": "rm -fR dist/",
+    "lint": "hover-scripts lint",
+    "prepublishOnly": "yarn rebuild && generate-export-aliases",
+    "rebuild": "yarn clean && yarn build",
+    "test": "hover-scripts test"
   },
   "repository": {
     "type": "git",
