--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "test": "hover-scripts test",
     "validate": "hover-scripts validate 'lint,test --coverage --runInBand --verbose'"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "hover-scripts pre-commit",
+      "commit-msg": "hover-scripts commit-msg"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/hoverinc/playwright-testing-library.git"
