🚚 Move tests back / ⬆️ Upgrade @hover/javascript (#88)
Co-authored-by: dependabot-preview[bot] <27856297+dependabot-preview[bot]@users.noreply.github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -3,6 +3,5 @@
   "compilerOptions": {
     "allowJs": true
   },
-  "include": ["lib/**/__tests__/**/*", "**/*.config.js"],
-  "exclude": []
+  "include": ["test", "**/*.config.js"]
 }
