--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 dist: trusty
 language: node_js
-cache: yarn
 notifications:
   email: false
 node_js:
@@ -16,13 +15,13 @@ env:
   - PPTR_OVERRIDE_VERSION=5.x.x
   - PPTR_OVERRIDE_VERSION=latest
 before_install:
-  - npm install -g yarn coveralls nyc @patrickhulce/scripts
+  - npm install -g coveralls nyc @patrickhulce/scripts
 before_script:
-  - yarn add -D "puppeteer@${PPTR_OVERRIDE_VERSION}"
-  - yarn add -D "@types/puppeteer@${PPTR_OVERRIDE_VERSION}" || echo "No types available"
+  - npm install -D "puppeteer@${PPTR_OVERRIDE_VERSION}"
+  - npm install -D "@types/puppeteer@${PPTR_OVERRIDE_VERSION}" || echo "No types available"
 script:
-  - yarn rebuild
-  - yarn test:lint
-  - yarn test:unit --coverage --runInBand --verbose
+  - npm run rebuild
+  - npm run test:lint
+  - npm run test:unit --coverage --runInBand --verbose
 after_success:
   - cat coverage/lcov.info | coveralls || echo 'Failed to upload to coveralls...'
