--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
   - PPTR_OVERRIDE_VERSION=5.x.x
   - PPTR_OVERRIDE_VERSION=latest
 before_install:
-  - nvm install-latest-npm
+  - npm install -g npm@7
   - npm install -g coveralls nyc @patrickhulce/scripts
 before_script:
   - npm install -D "puppeteer@${PPTR_OVERRIDE_VERSION}"
