--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@rollup/plugin-replace": "^2.3.1",
     "@types/jest": "^26.0.4",
     "generate-export-aliases": "^1.1.0",
+    "husky": "^4.3.8",
     "jest": "^25.1.0",
     "playwright": "^1.9.1",
     "rollup": "^2.0.3",
