--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "clean": "rm -fR dist/",
     "rebuild": "npm run clean && npm run build",
     "prepublishOnly": "npm run rebuild && generate-export-aliases",
-    "build": "npm run build:ts && npm run build:rollup",
+    "build": "npm run build:ts && npm run build:esbuild",
     "build:ts": "tsc",
-    "build:rollup": "rollup -c rollup.config.js"
+    "build:esbuild": "esbuild bundle.input.js --bundle --platform=browser --define:global=window --define:process.env.NODE_ENV=\\\"development\\\" --outfile=dom-testing-library.js"
   },
   "repository": {
     "type": "git",
@@ -57,19 +57,16 @@
   },
   "dependencies": {
     "@testing-library/dom": "^7.31.0",
+    "esbuild": "^0.12.2",
     "wait-for-expect": "^3.0.2"
   },
   "devDependencies": {
     "@patrickhulce/lint": "^2.1.3",
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
-    "@rollup/plugin-replace": "^2.3.1",
     "@types/jest": "^25.1.4",
     "@types/puppeteer": "^2.0.0",
     "generate-export-aliases": "^1.1.0",
     "jest": "^25.1.0",
-    "puppeteer": "^5.2.1",
-    "rollup": "^2.0.3",
+    "puppeteer": "^5.5.0",
     "ts-jest": "^25.2.1",
     "tslint": "^6.0.0",
     "typescript": "^3.8.3"
