build: upgrade @hover/javascript, ts-jest, jest

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "allowJs": true
   },
-  "include": ["test", "**/*.config.js", ".eslintrc.js"]
+  "include": ["test", "**/*.config.js", ".eslintrc.js", "jest.setup.ts"]
 }
