--- a/package.json
+++ b/package.json
@@ -48,17 +48,17 @@
     "wait-for-expect": "^3.0.2"
   },
   "devDependencies": {
-    "@hover/javascript": "^5.33.0",
+    "@hover/javascript": "^6.16.0",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-replace": "^2.3.1",
     "@types/jest": "^26.0.4",
     "generate-export-aliases": "^1.1.0",
     "husky": "^4.3.8",
-    "jest": "^25.1.0",
     "playwright": "^1.11.0",
     "rollup": "^2.0.3",
-    "ts-jest": "^25.2.1",
+    "setimmediate": "^1.0.5",
+    "ts-jest": "^27.0.3",
     "typescript": "^3.9.6"
   },
   "peerDependencies": {
