feat: add support for @playwright/test via fixture
Going forward, two packages will be published:
- **playwright-testing-library** to support the standalone queries with the
  **playwright** package (no longer supports extending the Playwright
  prototypes via `/extend`)
- **@playwright-testing-library/test** to support both standalone queries with
  **@playwright/test** _as well as_ a Playwright Test
  [fixture](https://playwright.dev/docs/test-fixtures) (available at
  `@playwright-testing-library/test/fixture`)

BREAKING CHANGE: Removes support for extending Playwright prototypes (`/extend`
entrypoint) BREAKING CHANGE: Only Playwright 1.12+ is officially supported
going forward

Co-authored-by: Zacharias Björngren <zacharias.bjorngren@gmail.com>

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -3,5 +3,14 @@
   "compilerOptions": {
     "allowJs": true
   },
-  "include": ["test", "**/*.config.js", ".eslintrc.js", "jest.setup.ts"]
+  "include": [
+    "**/*.config.js",
+    "**/*.config.ts",
+    "dom-testing-library.input.js",
+    ".eslintrc.js",
+    "playwright-test/*.js",
+    "playwright-test/*.ts",
+    "jest.setup.ts",
+    "test"
+  ]
 }
