--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
     strategy:
       matrix:
         node: ['12', '14', '16']
-        playwright: ['1.1.0', 'latest']
+        playwright: ['1.12.0', 'latest']
 
     steps:
       - name: Checkout
@@ -40,9 +40,9 @@ jobs:
         uses: actions/setup-node@master
         with:
           node-version: ${{ matrix.node }}
-          
+
       - name: Update to npm 7
-        run: npm i -g npm@7 --registry=https://registry.npmjs.org  
+        run: npm i -g npm@7 --registry=https://registry.npmjs.org
 
       - uses: actions/cache@v2
         with:
@@ -54,27 +54,31 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # Old versions of Playwright (<= 1.1.0) fail on Node 16
-
       - name: Install specific Playwright version
-        if: ${{ !(matrix.node == '16' && matrix.playwright == '1.1.0')  }}
         run: |
           npm install playwright@${{ matrix.playwright }}
+          npm install @playwright/test@${{ matrix.playwright }}
+
+      - name: Check types, run lint + tests
+        run: |
           npm why playwright
-
-      - name: Build
-        if: ${{ !(matrix.node == '16' && matrix.playwright == '1.1.0')  }}
-        run: npm run rebuild
-
-      - name: Run lint + tests
-        if: ${{ !(matrix.node == '16' && matrix.playwright == '1.1.0')  }}
-        run: npm run validate
+          npm why @playwright/test
+          npm run validate
 
       # Only release on Node 14
 
-      - name: Upload Coverage / Release
+      - name: Upload Coverage / Release / Playwright
         run: npm run ci-after-success
-        if: ${{ matrix.node == '14' }}
+        if: ${{ matrix.node == '14' && matrix.playwright == 'latest' }}
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload Coverage / Release / Playwright Test
+        run: |
+          npm run prepare:playwright-test
+          npm run ci-after-success
+        if: ${{ matrix.node == '14' && matrix.playwright == 'latest' }}
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
