--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "description": "playwright + dom-testing-library",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "npm run build:types && npm run build:rollup",
-    "build:rollup": "rollup -c rollup.config.js",
-    "build:types": "tsc",
+    "build": "run-s clean build:testing-library build:source",
+    "build:source": "tsc",
+    "build:testing-library": "rollup -c",
     "ci-after-success": "hover-scripts ci-after-success",
-    "clean": "rm -fR dist/",
+    "clean": "rimraf dist/*",
     "commit-msg": "hover-scripts commit-msg",
     "lint": "hover-scripts lint",
     "pre-commit": "hover-scripts pre-commit --no-toc",
     "prepare": "husky install",
-    "prepublishOnly": "npm run rebuild && generate-export-aliases",
-    "rebuild": "npm run clean && npm run build",
-    "test": "hover-scripts test",
-    "validate": "hover-scripts validate 'lint,test --coverage --runInBand --verbose'"
+    "prepare:playwright-test": "run-s prepare:playwright-test:package prepare:playwright-test:imports build:source prepare:playwright-test:entries",
+    "prepare:playwright-test:entries": "generate-export-aliases",
+    "prepare:playwright-test:imports": "./playwright-test/prepare-package.js",
+    "prepare:playwright-test:package": "jscodeshift -t ./playwright-test/rename-imports.ts --extensions=ts --parser=ts ./lib",
+    "prepublishOnly": "npm run build",
+    "test": "run-s build:testing-library test:*",
+    "test:fixture": "playwright test",
+    "test:standalone": "hover-scripts test --no-watch",
+    "test:types": "tsc --noEmit",
+    "validate": "run-s test"
   },
   "repository": {
     "type": "git",
@@ -37,7 +43,7 @@
   ],
   "config": {
     "exportAliases": {
-      "extend": "./dist/extend"
+      "fixture": "./dist/fixture"
     }
   },
   "dependencies": {
@@ -51,16 +57,20 @@
     "@rollup/plugin-node-resolve": "^13.0.5",
     "@rollup/plugin-replace": "^3.0.0",
     "@types/jest": "^27.0.2",
+    "@types/jscodeshift": "^0.11.2",
     "generate-export-aliases": "^1.1.0",
     "husky": "^7.0.2",
+    "jscodeshift": "^0.13.0",
+    "npm-run-all": "^4.1.5",
     "playwright": "^1.15.1",
+    "rimraf": "^3.0.2",
     "rollup": "^2.58.0",
     "setimmediate": "^1.0.5",
     "typescript": "^4.4.3"
   },
   "peerDependencies": {
-    "playwright": "^1.1.0",
-    "@playwright/test": "^1.12.0"
+    "@playwright/test": "^1.12.0",
+    "playwright": "^1.12.0"
   },
   "peerDependenciesMeta": {
     "playwright": {
