fix: don't use semantic release for second release

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Upload Coverage / Release / Playwright Test
         run: |
           npm run prepare:playwright-test
-          npm run ci-after-success
+          npm publish
         if: ${{ matrix.node == '14' && matrix.playwright == 'latest' }}
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
