--- a/package.json
+++ b/package.json
@@ -57,10 +57,12 @@
   },
   "dependencies": {
     "@testing-library/dom": "^7.31.0",
+    "benchmark": "^2.1.4",
     "wait-for-expect": "^3.0.2"
   },
   "devDependencies": {
     "@patrickhulce/lint": "^2.1.3",
+    "@types/benchmark": "^2.1.1",
     "@types/jest": "^26.0.23",
     "@types/puppeteer": "^5.4.3",
     "esbuild": "^0.12.2",
