--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "puppeteer + dom-testing-library",
   "main": "./dist/index.js",
   "scripts": {
-    "test": "npm run test:lint && npm run test:unit",
+    "test": "npm run test:unit",
     "test:unit": "jest",
-    "test:lint": "lint -t typescript './lib/**/*.ts'",
     "semantic-release": "semantic-release",
     "clean": "rm -fR dist/",
     "rebuild": "npm run clean && npm run build",
@@ -65,16 +64,16 @@
     "@types/puppeteer": "^5.4.3",
     "esbuild": "^0.12.2",
     "generate-export-aliases": "^1.1.0",
-    "jest": "^27.0.6",
-    "puppeteer": "^5.5.0",
-    "ts-jest": "^27.0.3",
+    "jest": "^29.7.0",
+    "puppeteer": "^17.1.3",
+    "ts-jest": "^29.1.2",
     "tslint": "^6.0.0",
-    "typescript": "^3.8.3"
+    "typescript": "^4.8.2"
   },
   "peerDependencies": {
     "puppeteer": "*"
   },
   "engines": {
-    "node": ">=12"
+    "node": ">=20"
   }
 }
